Got shadows working

--- a/src/main/resources/stylesheets/designer2012.css
+++ b/src/main/resources/stylesheets/designer2012.css
@@ -53,7 +53,12 @@
 	stroke-width: 2px;
 	stroke: black;
 	fill: white;
-	box-shadow: 4px 4px 0px #333333;
+	/*box-shadow-x-offset: 4px;
+	box-shadow-y-offset: 4px;
+	box-shadow-color: teal;
+	box-shadow-opacity: .3; */
+	
+	box-shadow: 4px 4px 0px #333333; 
 }
 
 .glyph .label {
