--- a/src/main/resources/stylesheets/designer2012.css
+++ b/src/main/resources/stylesheets/designer2012.css
@@ -3,6 +3,26 @@
 }
 
 
+diagram {
+	type: diagram;
+}
+
+glyph,
+arrow2,
+arrow3 {
+	type: text;
+}
+
+link {
+	type: link;
+}
+
+/*from,
+to {
+	type: link-end;
+} */
+
+
 .background {
 	
 	
