Links now working, sort of

--- a/src/main/resources/stylesheets/designer2012.css
+++ b/src/main/resources/stylesheets/designer2012.css
@@ -180,6 +180,12 @@ link.dotted {
 
 /* Terminators */
 
+terminator,
+fromDecoration, 
+toDecoration {
+	type: terminator;
+}
+
 .link-terminator {
 	margin: 0 5px 10px 5px;
 	height: 10px;
