--- a/src/main/resources/stylesheets/designer2012.css
+++ b/src/main/resources/stylesheets/designer2012.css
@@ -164,8 +164,10 @@ context label {
 	fill: #CCC;
 	fill-transparency: 60%;
 	stroke: black;
+	stroke-width: 0;
 	font-size: 10px;
 	font-family: "opensans-light-webfont";
+	padding: 4px 4px 4px 4px;
 }
 
 
