--- a/src/main/resources/stylesheets/designer2012.css
+++ b/src/main/resources/stylesheets/designer2012.css
@@ -10,7 +10,8 @@ diagram {
 
 glyph {
 	type: connected;
-	sizing: container;	
+	sizing: container;
+	layout: grid;	
 }
 
 arrow,
@@ -34,8 +35,8 @@ context {
 	sizing: container;
 }
 
-stereotype {
-	type: label;
+stereotype, label {
+	type: connected;
 	sizing: text;
 }
 
@@ -119,7 +120,7 @@ glyph {
 	box-shadow: 4px 4px 0px #333333; 
 }
 
-glyph .label {
+glyph label {
 	font-size: 15px;
 	text-align: middle;
 	font-family: "opensans-regular-webfont";
