Fixed issue with gridding being sized incorrectly

--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -124,6 +124,7 @@ glyph > label {
 	font-family: "opensans-regular-webfont";
 	template: url(template.svg#label);
 	occupies: 0 1 1 1;
+	fill: white;
 }
 
 glyph > stereotype {
