Further refactoring - hid all XML/CSS code within Batik package so that none of this is exposed to visualization.

--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -2,10 +2,18 @@
 	font-family: "opensans-light-webfont";
 }
 
+context, 
+diagram,
+glyph,
+arrow,
+link {
+	margin: 10px;
+}
 
 diagram {
 	type: diagram;
 	fill: none;
+	padding: 15px;
 }
 
 glyph {
@@ -30,6 +38,7 @@ context {
 	type: connected;
 	sizing: maximize;
 	traversal: always;
+	padding: 12px;
 }
 
 .background {
