Some refactoring to allow labels to be used in a grid. Also work around the main diagram element inheritance heirarchy Labels still not showing

--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -121,7 +121,7 @@ key {
 }
 
 glyph > label {
-	type: connected;
+	type: label;
 	sizing: fixed;
 	font-size: 15px;
 	text-align: middle;
@@ -233,6 +233,8 @@ diagram > label {
 	font-size: 10px;
 	font-family: "opensans-light-webfont";
 	padding: 4px 4px 4px 4px;
+	sizing: fixed;
+	template: url(template.svg#label)
 }
 
 allLinks {
