Fixed container labels, and double-ended conncection labels. 29_2 to go.

--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -258,19 +258,19 @@ key > bodyText {
 
 key > boldText {
 	occupies: 0 0;
-	type: label;
+	type: connected;
 	sizing: fixed;
 	template: url(template.svg#text-label);
 }
 
 key > bodyText {
 	occupies: 0 1;
-	type: label;
+	type: connected;
 	sizing: fixed;
 }
 
 key > text-lines {
-	type: label;
+	type: connected;
 	sizing: maximize;
 	occupies: 0 2;
 	layout: vertical;
