Added ConnectionSeparation enum and associated code

--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -181,6 +181,7 @@ arrow {
 	type: connected;
 	sizing: minimize;
 	template: url(template.svg#arrow);
+	connections: separate;
 }
 
 arrow > label {
