--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -114,7 +114,7 @@ glyph > label {
 	font-family: "opensans-regular-webfont";
 	template: url(template.svg#text-label);
 	occupies: 0 1 1 1;
-	horiz
+	horizontal-align: center;
 }
 
 glyph > stereotype {
