--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -1,5 +1,22 @@
 @namespace svg "http://www.w3.org/2000/svg";
 
+
+@font-face {
+	font-family: "opensans-light-webfont";
+	src: url('../fonts/opensans-light-webfont.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: "opensans-bold-webfont";
+	src: url('../fonts/opensans-bold-webfont.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: "opensans-regular-webfont";
+	src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
+}
+
+
 * {
 	font-family: "opensans-light-webfont";
 }
