--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -1,5 +1,3 @@
-@namespace svg "http://www.w3.org/2000/svg";
-
 
 @font-face {
 	font-family: "opensans-light-webfont";
@@ -21,60 +19,209 @@
 	font-family: "opensans-light-webfont";
 }
 
+/* Definitions of Kite9 Elements */
+
 context, 
 diagram,
 glyph,
 arrow,
 link {
-	margin: 10px;
-}
-
-.red {
-	font-size: 25px;
-	fill: red;
+	kite9-margin: 10px;
 }
 
 diagram {
-	type: diagram;
-	fill: none;
-	padding: 15px;
-	traversal: none;
+	kite9-type: diagram;
+	kite9-padding: 15px;
+	kite9-traversal: none;
 }
 
 glyph {
-	type: connected;
-	sizing: minimize;
-	layout: grid;	
-	grid-size: 1 2;
-	template: url(template.svg#glyph);
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-layout: grid;	
+	kite9-grid-size: 1 2;
+	kite9-template: url(template.svg#glyph);
+}
+
+context {
+	kite9-template: url(template.svg#context);
+	kite9-padding: 10px;	
+}
+
+
+toLabel, 
+fromLabel,
+label {
+	kite9-type: label; 
+	kite9-padding: 4px 4px 4px 4px;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#connection-label)
 }
 
 renderingInformation,
 position,
-size {
-	type: none;
+size,
+allLinks {
+	kite9-type: none;
 }
 
-
 link {
-	type: link;
+	kite9-type: link;
 }
 
 from,
 to {
-	type: link-end;
+	kite9-type: link-end;
 } 
 
 context {
-	type: connected;
-	sizing: maximize;
-	traversal: always;
-	padding: 12px;
+	kite9-type: connected;
+	kite9-sizing: maximize;
+	kite9-traversal: always;
+	kite9-padding: 12px;
 }
 
-.background {
-	
-	
+/* Symbols */
+
+symbol {
+	kite9-type: connected;
+	kite9-sizing: fixed;
+}
+
+symbol.circle {
+	kite9-template: url(template.svg#circle);	 
+}
+
+symbol.hexagon {
+	kite9-template: url(template.svg#hexagon);
+}
+
+symbol.diamond {
+	kite9-template: url(template.svg#diamond);
+}
+
+glyph {
+	kite9-padding: 6px 10px 6px 10px; 
+	kite9-margin: 10px;
+}
+
+glyph > label {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#text-label);
+	kite9-occupies: 0 1 1 1;
+	kite9-vertical-align: top;
+}
+
+glyph > label > contents {
+	kite9-type: connected;
+	kite9-sizing: fixed;
+	kite9-horizontal-align: center;
+}
+
+glyph > stereotype {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#text-label);
+	kite9-occupies: 0 0;
+	kite9-vertical-align: top;
+}
+
+glyph > stereotype > label {
+	kite9-type: connected;
+	kite9-sizing: fixed;
+	kite9-horizontal-align: center;
+}
+
+glyph > text-lines {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-occupies: 0 1 2 2;
+	kite9-layout: vertical;
+}
+
+symbols {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-layout: horizontal;
+	kite9-occupies: 1 0;
+}
+
+symbol-text-line {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-layout: grid;
+	kite9-grid-size: 2 1;
+} 
+
+text-line, text, boldText, bodyText {
+	kite9-occupies: 0 0;
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-padding-top: 2px;
+	kite9-padding-bottom: 2px;
+	kite9-padding-left: 0px;
+	kite9-padding-right: 0px;
+	kite9-margin: 0 0 0 0; 
+	kite9-template: url(template.svg#text-label);
+	kite9-vertical-align: top;
+	kite9-horizontal-align: left;
+}
+
+glyph > symbols {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-occupies: 1 0;
+	kite9-layout: horizontal;
+}
+
+/* Arrow */
+arrow {
+	kite9-padding: 3px 5px 3px 5px; 
+	kite9-margin: 10 10 10 10; 
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#arrow);
+	kite9-connections: separate;
+}
+
+
+arrow > label {
+	kite9-type: connected;
+	kite9-sizing: minimize;
+	kite9-template: url(template.svg#text-label);
+	kite9-horizontal-align: center;
+	kite9-vertical-align: center;
+}
+
+arrow > label > contents {
+	kite9-sizing: fixed;
+	kite9-horizontal-align: center;
+	kite9-vertical-align: center;
+}
+
+terminator,
+fromDecoration, 
+toDecoration {
+	kite9-type: terminator;
+}
+
+.link-terminator {
+	kite9-margin: 0 5px 10px 5px;
+}
+
+.link-terminator.none {
+	kite9-margin: 0 0 0 0;
+}
+
+
+/* Classes And Styles */
+
+.arrow > .label > .contents .text {
+	font-size: 12px;
+	stroke: white;
+	fill: white;
+	font-family: "opensans-regular-webfont";
 }
 
 .copyright {
@@ -83,24 +230,11 @@ context {
 	stroke: black;
 }
 
-.shadow {
-	fill: #040404;
-	offset-x: 2px;
-	offset-y: 2px;
-}
-
-
-/* Symbols */
-
-symbol {
-	type: connected;
-	sizing: fixed;
+.symbol {
 	font-weight: bold;
 	font-size: 10px;
 	font-family: "opensans-bold-webfont";
 	text-align:  middle;
-	width: 14px;
-	height: 14px;
 	stroke: white;
 }
 
@@ -108,183 +242,21 @@ symbol {
 	color: white;
 }
 
-symbol.circle {
-	fill: rgb(0, 150, 73);
-	template: url(template.svg#circle);
-	 
-}
-
-symbol.hexagon {
-	fill: rgb(207, 36, 42);
-	template: url(template.svg#hexagon);
-}
-
-symbol.diamond {
-	fill: rgb(237, 106, 86);
-	template: url(template.svg#diamond);
-}
-
-/* Glyph */
-glyph {
-	padding: 6px 10px 6px 10px; 
-	margin: 10px;
-	stroke-width: 1px;
-	stroke: black;
-	fill: white;
-}
-
-glyph > label {
-	type: connected;
-	sizing: minimize;
-	template: url(template.svg#text-label);
-	occupies: 0 1 1 1;
-	vertical-align: top;
-}
-
-back {
-	box-shadow: 4px 4px 0px #777777;	
-}
-
-glyph > label > contents {
-	type: connected;
-	sizing: fixed;
-	font-size: 15px;
-	fill: black;
-	font-family: "opensans-regular-webfont";
-	horizontal-align: center;
-}
-
-glyph > stereotype {
-	type: connected;
-	sizing: minimize;
-	template: url(template.svg#text-label);
-	occupies: 0 0;
-	vertical-align: top;
-}
-
-glyph > stereotype > label {
-	type: connected;
-	sizing: fixed;
-	horizontal-align: center;
-}
-
-glyph > stereotype .text {
-	font-family: "opensans-bold-webfont";
-	font-size: 12px;
-	fill: black;
-}
-
-glyph > text-lines {
-	type: connected;
-	sizing: minimize;
-	occupies: 0 1 2 2;
-	layout: vertical;
-}
-
-symbols {
-	type: connected;
-	sizing: minimize;
-	layout: horizontal;
-	occupies: 1 0;
-}
-
-symbol-text-line {
-	type: connected;
-	sizing: minimize;
-	layout: grid;
-	grid-size: 2 1;
-} 
-
-text-line, text, boldText, bodyText {
-	occupies: 0 0;
-	type: connected;
-	sizing: minimize;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	padding-left: 0px;
-	padding-right: 0px;
-	margin: 0 0 0 0; 
-	font-size: 13px;
-	stroke: black;
-	fill: black;
-	font-family: "opensans-regular-webfont";
-	text-align: start;
-	template: url(template.svg#text-label);
-	vertical-align: top;
-	horizontal-align: left;
-}
-
-glyph > symbols {
-	type: connected;
-	sizing: minimize;
-	occupies: 1 0;
-	layout: horizontal;
-}
-
-/* Arrow */
-arrow {
-	padding: 3px 5px 3px 5px; 
-	margin: 10 10 10 10; 
-	fill: black;
-	stroke: black;
-	stroke-width: 2px;
-	type: connected;
-	sizing: minimize;
-	template: url(template.svg#arrow);
-	connections: separate;
-}
-
-arrow > label {
-	type: connected;
-	sizing: minimize;
-	template: url(template.svg#text-label);
-	horizontal-align: center;
-	vertical-align: center;
-}
-
-arrow > label > contents {
-	sizing: fixed;
-	horizontal-align: center;
-	vertical-align: center;
-}
-
-arrow > label > contents .text {
-	font-size: 12px;
-	stroke: white;
-	fill: white;
-	font-family: "opensans-regular-webfont";
-}
-
-/* Context */
-
-context {
+.context {
 	fill: none;
 	stroke: black;
 	stroke-width: 2px;
-	template: url(template.svg#context);
-	padding: 10px;
 }
 
-/* Labels */
-
-toLabel, 
-fromLabel,
-context > label,
-diagram > label {
-	type: label; 
+.fromLabel,
+.toLabel, 
+.label {
 	fill: #CCC;
 	fill-transparency: 60%;
 	stroke: green;
 	stroke-width: 0;
 	font-size: 10px;
 	font-family: "opensans-light-webfont";
-	padding: 4px 4px 4px 4px;
-	sizing: minimize;
-	template: url(template.svg#connection-label)
-}
-
-allLinks {
-	type: none;	
 }
 
 
@@ -292,74 +264,73 @@ allLinks {
 
 
 key {
-	type: label;
-	layout: grid;
-	sizing: maximize;
-	grid-size: 1 3;
-	padding: 3px 6px 3px 6px; 
-	margin: 12px 12px 12px 12px;
-	template: url(template.svg#key)
+	kite9-type: label;
+	kite9-layout: grid;
+	kite9-sizing: maximize;
+	kite9-grid-size: 1 3;
+	kite9-padding: 3px 6px 3px 6px; 
+	kite9-margin: 12px 12px 12px 12px;
+	kite9-template: url(template.svg#key)
 }
 
 key > boldText,
 key > bodyText {
-	padding-top: 2px;
-	padding-bottom: 2px;
-	padding-left: 0px;
-	padding-right: 0px;
-	margin: 0 0 0 0; 
+	kite9-padding-top: 2px;
+	kite9-padding-bottom: 2px;
+	kite9-padding-left: 0px;
+	kite9-padding-right: 0px;
+	kite9-margin: 0 0 0 0; 
+	kite9-template: url(template.svg#text-label);
 	font-size: 13px;
 	stroke: black;
 	fill: black;
 	font-family: "opensans-regular-webfont";
 	text-align: start;
-	template: url(template.svg#text-label);
 }
 
 
 key > boldText {
-	occupies: 0 0;
-	type: connected;
-	sizing: fixed;
-	template: url(template.svg#text-label);
+	kite9-occupies: 0 0;
+	kite9-type: connected;
+	kite9-sizing: fixed;
+	kite9-template: url(template.svg#text-label);
 }
 
 key > bodyText {
-	occupies: 0 1;
-	type: connected;
-	sizing: fixed;
+	kite9-occupies: 0 1;
+	kite9-type: connected;
+	kite9-sizing: fixed;
 }
 
 key > text-lines {
-	type: connected;
-	sizing: maximize;
-	occupies: 0 2;
-	layout: vertical;
+	kite9-type: connected;
+	kite9-sizing: maximize;
+	kite9-occupies: 0 2;
+	kite9-layout: vertical;
 }
 
-/* Link */
+.red {
+	font-size: 25px;
+	fill: red;
+}
 
-link {
+.diagram {
+	fill: none;
+	
+}
+
+.link {
 	stroke: black;
 	stroke-width: 2px;
 	
 }
 
-link.dotted {
+.link.dotted {
 	stroke-dasharray: 5px 5px;
 	
 }
 
-/* Terminators */
-
-terminator,
-fromDecoration, 
-toDecoration {
-	type: terminator;
-}
-
 .link-terminator {
-	margin: 0 5px 10px 5px;
 	height: 10px;
 	fill: black;
 	stroke: black;
@@ -370,11 +341,43 @@ toDecoration {
 	fill: none;	
 }
 
-.link-terminator.none {
-	margin: 0 0 0 0;
-}
-
-
 .copyright {
 	font-size: 12px;
 }
+
+.glyph .label .contents {
+	font-size: 15px;
+	fill: black;
+	font-family: "opensans-regular-webfont";
+}
+
+
+.arrow {
+	fill: black;
+	stroke: black;
+	stroke-width: 2px;
+}
+
+.glyph {
+	stroke-width: 1px;
+	stroke: black;
+	fill: white;
+}
+
+.glyph > .stereotype .text {
+	font-family: "opensans-bold-webfont";
+	font-size: 12px;
+	fill: black;
+}
+
+.text-line,
+.text,
+.boldText,
+.bodyText {
+	font-size: 13px;
+	stroke: black;
+	fill: black;
+	font-family: "opensans-regular-webfont";
+	text-align: start;
+}
+
