--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -34,6 +34,7 @@ diagram {
 	kite9-type: diagram;
 	kite9-padding: 15px;
 	kite9-traversal: none;
+	kite9-template: url(template.svg#diagram)
 }
 
 glyph {
