--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -113,6 +113,7 @@ glyph > label {
 	kite9-template: url(template.svg#text-label);
 	kite9-occupies: 0 1 1 1;
 	kite9-vertical-align: top;
+	kite9-margin: 5px
 }
 
 glyph > label > contents {
@@ -127,6 +128,7 @@ glyph > stereotype {
 	kite9-template: url(template.svg#text-label);
 	kite9-occupies: 0 0;
 	kite9-vertical-align: top;
+	kite9-margin: 0px 0px 2px 0px;
 }
 
 glyph > stereotype > label {
@@ -321,7 +323,6 @@ key > text-lines {
 	fill: white;
 }
 
-
 .glyph  .label  .text {
 	font-size: 15px;
 	fill: black;
@@ -334,14 +335,16 @@ key > text-lines {
 	font-size: 12px;
 	fill: black;
 	stroke: none;
+	kite9-padding: 2px 2px 2px 2px;
 }
 
-/*.text {
+.glyph .text-lines .text {
 	stroke: none;
 	fill: black;
 	font-family: "opensans-regular-webfont";
 	text-align: start;	
-}*/
+	font-size: 10px;
+}
 
 .red {
 	font-size: 25px;
@@ -379,11 +382,11 @@ key > text-lines {
 	font-size: 12px;
 }
 
-.arrow .label {
-	fill: black;
-	stroke: black;
-	stroke-width: 2px;
+.arrow .label .text {
+	fill: white;
+	stroke: none;
 	font-size: 12px;
+	font-family: "opensans-regular-webfont";
 }
 
 
