--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -38,8 +38,7 @@ diagram {
 }
 
 glyph {
-	kite9-type: connected;
-	kite9-sizing: minimize;
+	kite9-type: container;
 	kite9-layout: grid;	
 	kite9-grid-size: 1 2;
 	kite9-template: url(template.svg#glyph);
@@ -54,7 +53,8 @@ context {
 toLabel, 
 fromLabel,
 label {
-	kite9-type: label; 
+	kite9-usage: label;
+	kite9-type: container; 
 	/*kite9-padding: 4px 4px 4px 4px; */
 	kite9-sizing: minimize;
 	kite9-template: url(template.svg#connection-label)
@@ -77,7 +77,7 @@ to {
 } 
 
 context {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: maximize;
 	kite9-traversal: always;
 	kite9-padding: 12px;
@@ -86,8 +86,7 @@ context {
 /* Symbols */
 
 symbol {
-	kite9-type: connected;
-	kite9-sizing: fixed;
+	kite9-type: container;
 }
 
 symbol.circle {
@@ -113,51 +112,48 @@ glyph {
 }
 
 glyph > label {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
-	kite9-template: url(template.svg#text-label);
+	kite9-template: url(template.svg#text-label-container);
 	kite9-occupies: 0 1 1 1;
 	kite9-vertical-align: top;
 	/*kite9-margin: 5px */
 }
 
 glyph > label > contents {
-	kite9-type: connected;
-	kite9-sizing: fixed;
+	kite9-type: container;
 	kite9-horizontal-align: center;
 }
 
-glyph > stereotype {
-	kite9-type: connected;
-	kite9-sizing: minimize;
-	kite9-template: url(template.svg#text-label);
+stereotype {
+	kite9-type: container;
+	kite9-template: url(template.svg#text-label-container);
 	kite9-occupies: 0 0;
 	kite9-vertical-align: bottom;
 	/*kite9-margin: 0px 4px 2px 0px; */
 }
 
 glyph > stereotype > label {
-	kite9-type: connected;
-	kite9-sizing: fixed;
+	kite9-type: container;
 	kite9-horizontal-align: center;
 }
 
 glyph > text-lines {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-occupies: 0 1 2 2;
 	kite9-layout: vertical;
 }
 
 symbols {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-layout: horizontal;
 	kite9-occupies: 1 0;
 }
 
 symbol-text-line {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-layout: grid;
 	kite9-grid-size: 2 1;
@@ -165,20 +161,20 @@ symbol-text-line {
 
 text-line, text, boldText, bodyText {
 	kite9-occupies: 0 0;
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
 	/*kite9-padding-top: 2px;
 	kite9-padding-bottom: 2px;
 	kite9-padding-left: 0px;
 	kite9-padding-right: 0px;
 	kite9-margin: 0 0 0 0; */
-	kite9-template: url(template.svg#text-label);
+	kite9-template: url(template.svg#text-label-container);
 	kite9-vertical-align: top;
 	kite9-horizontal-align: left;
 }
 
 glyph > symbols {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-occupies: 1 0;
 	kite9-layout: horizontal;
@@ -188,7 +184,7 @@ glyph > symbols {
 arrow {
 	kite9-padding: 3px 5px 3px 5px; 
 	kite9-margin: 10 10 10 10; 
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
 	kite9-template: url(template.svg#arrow);
 	kite9-connections: separate;
@@ -196,15 +192,14 @@ arrow {
 
 
 arrow > label {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: minimize;
-	kite9-template: url(template.svg#text-label);
+	kite9-template: url(template.svg#text-label-container);
 	kite9-horizontal-align: center;
 	kite9-vertical-align: center;
 }
 
 arrow > label > contents {
-	kite9-sizing: fixed;
 	kite9-horizontal-align: center;
 	kite9-vertical-align: center;
 }
@@ -273,7 +268,8 @@ toDecoration {
 
 
 key {
-	kite9-type: label;
+	kite9-type: container;
+	kite9-usage: label;
 	kite9-layout: grid;
 	kite9-sizing: maximize;
 	kite9-grid-size: 1 3;
@@ -289,7 +285,7 @@ key > bodyText {
 	kite9-padding-left: 0px;
 	kite9-padding-right: 0px;
 	kite9-margin: 0 0 0 0; 
-	kite9-template: url(template.svg#text-label);
+	kite9-template: url(template.svg#text-label-container);
 	font-size: 13px;
 	stroke: black;
 	fill: black;
@@ -300,19 +296,17 @@ key > bodyText {
 
 key > boldText {
 	kite9-occupies: 0 0;
-	kite9-type: connected;
-	kite9-sizing: fixed;
-	kite9-template: url(template.svg#text-label);
+	kite9-type: container;
+	kite9-template: url(template.svg#text-label-container);
 }
 
 key > bodyText {
 	kite9-occupies: 0 1;
-	kite9-type: connected;
-	kite9-sizing: fixed;
+	kite9-type: container;
 }
 
 key > text-lines {
-	kite9-type: connected;
+	kite9-type: container;
 	kite9-sizing: maximize;
 	kite9-occupies: 0 2;
 	kite9-layout: vertical;
