--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -49,9 +49,10 @@ fromLabel,
 context > label {
 	kite9-usage: label;
 	kite9-type: container; 
-	/*kite9-padding: 4px 4px 4px 4px; */
+	kite9-padding: 4px 4px 4px 4px; 
 	kite9-sizing: minimize;
-	kite9-template: url(template.svg#connection-label)
+	kite9-template: url(template.svg#container-label);
+	kite9-margin: 4px;
 }
 
 renderingInformation,
@@ -81,6 +82,7 @@ context {
 
 symbol {
 	kite9-type: svg;
+	kite9-margin: 0 2px 0 2px;
 }
 
 symbol.circle {
@@ -157,11 +159,11 @@ text-line, text, boldText, bodyText {
 	kite9-occupies: 0 0;
 	kite9-type: container;
 	kite9-sizing: minimize;
-	/*kite9-padding-top: 2px;
+	kite9-padding-top: 2px;
 	kite9-padding-bottom: 2px;
 	kite9-padding-left: 0px;
 	kite9-padding-right: 0px;
-	kite9-margin: 0 0 0 0; */
+	kite9-margin: 0 0 0 0; 
 	kite9-template: url(template.svg#text-label-container);
 	kite9-vertical-align: top;
 	kite9-horizontal-align: left;
@@ -328,7 +330,7 @@ key > text-lines {
 	font-size: 12px;
 	fill: black;
 	stroke: none;
-	/*kite9-padding: 2px 2px 2px 2px; */
+	kite9-padding: 2px 2px 2px 2px; 
 }
 
 .glyph .text-lines .text-label {
